# agentic-coding-starter

./: .env.example  .gitignore  Makefile  Procfile.dev  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: 03-design-system.agent.md  06-design-sampledata.agent.md  07-design-screen.agent.md  08-design-screenshot.agent.md  11-dev-requirements.agent.md  12-dev-architecture.agent.md  13-dev-backend.agent.md  14-dev-frontend.agent.md  15-dev-qa.agent.md  architecture.agent.md  backend.agent.md  clickdummy.agent.md  design-data-shape.agent.md  design-export-product.agent.md  design-product-vision.agent.md  design-shell.agent.md  dev-architecture.agent.md  dev-backend.agent.md  dev-frontend.agent.md  dev-qa.agent.md  dev-requirements.agent.md  export-product.agent.md  frontend.agent.md  product-roadmap.agent.md  qa.agent.md  requirements.agent.md  shape-section.agent.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  security.instructions.md
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: config.py  database.py  main.py
backend/app/api/: health.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
design/: agents.md  claude.md  package-lock.json  package.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: example.spec.ts
project/: ARCHITECTURE.md  PRD.md
(+15 files in other folders)
